# Academic-Repository

./: .gitignore  README.md
Autonomous robotics/hw4/: CMakeLists.txt  package.xml  poses.txt
Autonomous robotics/hw4/launch/: FSM.launch  hw2_test.launch
Autonomous robotics/hw4/msg/: msg1.msg
Autonomous robotics/hw4/src/: user_service.cpp
Autonomous robotics/hw4/src/hw1/: ObjectDetector.cpp  ObjectDetector.h  main.cpp
Autonomous robotics/hw4/src/hw2/: main.cpp  manipulation.cpp  manipulation.h
Autonomous robotics/hw4/src/hw3/: main.cpp  navigation.cpp  navigation.h  parameters.cpp  parameters.h
Autonomous robotics/hw4/srv/: User.srv  srv1.srv
Big data computing/: FormHM406.docx  G06HM2.java  G06HM3.java  G06HM4.java  README.txt
Computer vision/PROJECT/: CMakeLists.txt  PRESENTATION_CV.pptx  README.txt  training_model.py
Computer vision/PROJECT/Project_test/OpenCVTest/: PlateDetector.cpp  PlateDetector.h  PossibleChar.cpp  PossibleChar.h  PossiblePlate.cpp  PossiblePlate.h  main.cpp
Computer vision/PROJECT/Project_test/Project_test.xcodeproj/: project.pbxproj
Computer vision/PROJECT/Project_test/Project_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Computer vision/PROJECT/Project_test/Project_test.xcodeproj/project.xcworkspace/xcuserdata/matteomoratello.xcuserdatad/: UserInterfaceState.xcuserstate
Computer vision/PROJECT/Project_test/Project_test.xcodeproj/xcshareddata/xcschemes/: Lab1.xcscheme  Project_test.xcscheme
Computer vision/PROJECT/Project_test/Project_test.xcodeproj/xcuserdata/matteomoratello.xcuserdatad/xcschemes/: xcschememanagement.plist
Computer vision/PROJECT/cpp_code/: PlateDetector.cpp  main.cpp
Computer vision/PROJECT/latex/PROJECT - OPENCV/: PROJECT.aux  PROJECT.tex
Machine learning/: LC_MatteoMoratello_1205720.ipynb  LR_MatteoMoratello_1205720.ipynb  NN_MatteoMoratello_1205720.ipynb  RR_MatteoMoratello_1205720.ipynb  SVM_MatteoMoratello_1205720.ipynb
Machine learning/classification/.ipynb_checkpoints/: Classification_wineData-checkpoint.ipynb  LC_MatteoMoratello_1205720-checkpoint.ipynb
Machine learning/regression/CCPP/.ipynb_checkpoints/: LR_MatteoMoratello_1205720-checkpoint.ipynb  Regression_simple-checkpoint.ipynb
